--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,23 @@
   "require": {
     "pnbarbeito/ondine": "dev-main"
   },
+  "require-dev": {
+    "phpunit/phpunit": "^10.0",
+    "guzzlehttp/guzzle": "^7.5"
+  },
   "autoload": {
     "psr-4": {
       "App\\": "src/"
     }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Tests\\": "tests/"
+    }
+  },
+  "scripts": {
+    "test": "phpunit",
+    "test-coverage": "phpunit --coverage-html coverage"
   },
   "minimum-stability": "dev",
   "prefer-stable": true
