--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "type": "project",
   "license": "MIT",
   "require": {
-    "pnbarbeito/ondine": "dev-main"
+    "pnbarbeito/ondine": "v1.0.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^10.0",
